fix scrollbars

--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .field {
 	width: 100%;
-	overflow: scroll;
+	overflow: auto;
 }
 
 .field table {
